--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:07:44 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:08:27 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -188,6 +188,22 @@ E (F)</td>
 +2 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">Tom Davis</td>
+      <td class="bigbold">-10</td>
+      <td>Dustin Johnson(W) -4
+-4 thru 13</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Corey Conners -2
+-2 thru 17</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-9</td>
       <td>Scottie Scheffler -3
@@ -212,10 +228,10 @@ E (F)</td>
 -3 thru 13</td>
       <td>Corey Conners -2
 -2 thru 17</td>
-      <td>Viktor Hovland E
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland E
 E thru 12</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 12</td>
       <td class="greyout">Jon Rahm(W) +2
 +2 thru 13</td>
     </tr>
@@ -268,22 +284,6 @@ E thru 12</td>
 +1 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-9</td>
-      <td>Dustin Johnson(W) -4
--4 thru 13</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Corey Conners -2
--2 thru 17</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-8</td>
       <td>Cameron Smith -4
@@ -308,12 +308,44 @@ E thru 12</td>
 -3 (F)</td>
       <td>Matthew Fitzpatrick -1
 -1 thru 12</td>
-      <td>Brooks Koepka E
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td class="greyout leftborder">Brooks Koepka E
 E thru 12</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 12</td>
       <td class="greyout">Xander Schauffele +1
 +1 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Will Zalatoris -3
+-3 thru 13</td>
+      <td>Tony Finau -1
+-1 (F)</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">-7</td>
+      <td>Dustin Johnson -4
+-4 thru 13</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Brooks Koepka(W) E
+E thru 12</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 12</td>
+      <td class="greyout">Adam Scott +2
++2 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -332,52 +364,68 @@ E thru 12</td>
 +2 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">BCREAMED</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td class="greyout leftborder">Sam Burns +1
++1 thru 14</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Team Steve</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith(W) -4
 -4 (F)</td>
       <td>Scottie Scheffler -3
 -3 (F)</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
       <td>Viktor Hovland E
 E thru 12</td>
-      <td>Brooks Koepka E
+      <td class="greyout leftborder">Brooks Koepka E
 E thru 12</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 12</td>
       <td class="greyout">Shane Lowry +1
 +1 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
       <td>Will Zalatoris -3
 -3 thru 13</td>
-      <td>Tony Finau -1
--1 (F)</td>
-      <td>Patrick Cantlay +1
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">-6</td>
-      <td>Dustin Johnson -4
--4 thru 13</td>
-      <td>Scottie Scheffler -3
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Scottie Scheffler(W) -3
 -3 (F)</td>
-      <td>Brooks Koepka(W) E
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td>Brooks Koepka E
 E thru 12</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 12</td>
-      <td class="greyout">Adam Scott +2
-+2 (F)</td>
+      <td class="greyout">Billy Horschel +2
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
@@ -394,22 +442,6 @@ E thru 12</td>
 +1 thru 12</td>
       <td class="greyout">Jon Rahm(W) +2
 +2 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">BCREAMED</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td>Sam Burns +1
-+1 thru 14</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 12</td>
-      <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
@@ -444,35 +476,19 @@ E thru 12</td>
 +1 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
+      <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-6</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Will Zalatoris -3
--3 thru 13</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -4
--4 (F)</td>
       <td>Scottie Scheffler(W) -3
 -3 (F)</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
-      <td class="greyout">Billy Horschel +2
+      <td>Corey Conners -2
+-2 thru 17</td>
+      <td>Rory McIlroy -1
+-1 thru 12</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td class="greyout leftborder">Robert MacIntyre +1
++1 (F)</td>
+      <td class="greyout">Jon Rahm +2
 +2 thru 13</td>
     </tr>
     <tr>
@@ -540,6 +556,38 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">-5</td>
+      <td>Dustin Johnson -4
+-4 thru 13</td>
+      <td>Rory McIlroy(W) -1
+-1 thru 12</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td>Viktor Hovland E
+E thru 12</td>
+      <td class="greyout leftborder">Jon Rahm +2
++2 thru 13</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Corey Conners -2
+-2 thru 17</td>
+      <td>Patrick Cantlay(W) E
+E thru 13</td>
+      <td>Viktor Hovland E
+E thru 12</td>
+      <td class="greyout leftborder">Sam Burns +1
++1 thru 14</td>
+      <td class="greyout">Jon Rahm +2
++2 thru 13</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -4
@@ -570,22 +618,6 @@ E thru 12</td>
 +1 thru 13</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler(W) -3
--3 (F)</td>
-      <td>Corey Conners -2
--2 thru 17</td>
-      <td>Rory McIlroy -1
--1 thru 12</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Robert MacIntyre +1
-+1 (F)</td>
-      <td class="greyout">Jon Rahm +2
-+2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -652,36 +684,20 @@ E thru 12</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">-4</td>
-      <td>Dustin Johnson -4
--4 thru 13</td>
-      <td>Rory McIlroy(W) -1
--1 thru 12</td>
-      <td>Viktor Hovland E
-E thru 12</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +2
-+2 thru 13</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler -3
 -3 (F)</td>
-      <td>Corey Conners -2
--2 thru 17</td>
+      <td>Rory McIlroy -1
+-1 thru 12</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
       <td>Viktor Hovland E
 E thru 12</td>
-      <td>Patrick Cantlay(W) +1
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Sam Burns +1
-+1 thru 14</td>
-      <td class="greyout">Jon Rahm +2
-+2 thru 13</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -716,6 +732,38 @@ E thru 12</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td>Viktor Hovland E
+E thru 12</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-4</td>
+      <td>Dustin Johnson -4
+-4 thru 13</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td>Viktor Hovland E
+E thru 12</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth(W) +2
++2 thru 12</td>
+      <td class="greyout">Jon Rahm +2
++2 thru 13</td>
+    </tr>
+    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-4</td>
       <td>Joaquin Niemann -3
@@ -730,22 +778,6 @@ E thru 12</td>
 +1 thru 14</td>
       <td class="greyout">Brian Harman +2
 +2 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
-      <td>Rory McIlroy -1
--1 thru 12</td>
-      <td>Viktor Hovland E
-E thru 12</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Benjac</td>
@@ -764,36 +796,36 @@ E thru 12</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Viktor Hovland E
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">-2</td>
+      <td>Will Zalatoris -3
+-3 thru 13</td>
+      <td>Viktor Hovland(W) E
 E thru 12</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td>Patrick Cantlay +1
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td>Collin Morikawa +1
++1 thru 13</td>
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-3</td>
-      <td>Dustin Johnson -4
--4 thru 13</td>
-      <td>Viktor Hovland E
-E thru 12</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +2
-+2 thru 12</td>
       <td class="greyout">Jon Rahm +2
 +2 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Philip Dale</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td>Xander Schauffele +1
++1 thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 12</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -812,36 +844,20 @@ E thru 12</td>
 +2 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">-1</td>
-      <td>Will Zalatoris -3
--3 thru 13</td>
-      <td>Viktor Hovland(W) E
-E thru 12</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
-      <td>Collin Morikawa +1
-+1 thru 13</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
-      <td class="greyout">Jon Rahm +2
-+2 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Philip Dale</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">Neville Spillman</td>
+      <td class="bigbold">-2</td>
       <td>Scottie Scheffler -3
 -3 (F)</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
-      <td>Xander Schauffele +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Sam Burns +1
++1 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth(W) +2
 +2 thru 12</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
+      <td class="greyout">Jon Rahm +2
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -892,20 +908,20 @@ E thru 12</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Neville Spillman</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
-      <td>Brooks Koepka E
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">0</td>
+      <td>Daniel Berger -1
+-1 (F)</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td>Viktor Hovland E
 E thru 12</td>
-      <td>Sam Burns +1
-+1 thru 14</td>
-      <td>Patrick Cantlay +1
+      <td>Xander Schauffele +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +2
-+2 thru 12</td>
-      <td class="greyout">Jon Rahm +2
+      <td class="greyout leftborder">Jon Rahm +2
 +2 thru 13</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
@@ -940,30 +956,14 @@ E thru 12</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">1</td>
-      <td>Daniel Berger -1
--1 (F)</td>
-      <td>Viktor Hovland E
-E thru 12</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
-      <td>Xander Schauffele +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +2
-+2 thru 13</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Rory McIlroy -1
 -1 thru 12</td>
+      <td>Patrick Cantlay(W) E
+E thru 13</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td>Patrick Cantlay(W) +1
-+1 thru 12</td>
       <td>Xander Schauffele +1
 +1 thru 12</td>
       <td class="greyout leftborder">Jon Rahm +2
@@ -973,19 +973,51 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Tony Finau -1
 -1 (F)</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
       <td>Collin Morikawa +1
 +1 thru 13</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 +2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">2</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td>Collin Morikawa +1
++1 thru 13</td>
+      <td>Xander Schauffele +1
++1 thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 12</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">2</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td>Hideki Matsuyama E
+E (F)</td>
+      <td>Jon Rahm(W) +2
++2 thru 13</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 12</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
@@ -1020,20 +1052,20 @@ E thru 12</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">3</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
-      <td>Collin Morikawa +1
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td>Hideki Matsuyama E
+E (F)</td>
+      <td>Collin Morikawa(W) +1
 +1 thru 13</td>
-      <td>Xander Schauffele +1
-+1 thru 12</td>
+      <td>Jon Rahm +2
++2 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 12</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
+      <td class="greyout">Paul Casey
+Out With Injury</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -1050,38 +1082,6 @@ E thru 12</td>
 +2 thru 12</td>
       <td class="greyout">Patrick Reed +3
 +3 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">3</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td>Hideki Matsuyama E
-E (F)</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
-      <td>Jon Rahm(W) +2
-+2 thru 13</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 12</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">4</td>
-      <td>Hideki Matsuyama E
-E (F)</td>
-      <td>Collin Morikawa(W) +1
-+1 thru 13</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
-      <td>Jon Rahm +2
-+2 thru 13</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 12</td>
-      <td class="greyout">Paul Casey
-Out With Injury</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
