--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:07:44 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:08:27 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -189,18 +189,34 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-7</td>
       <td>Scottie Scheffler -3
 -3 (F)</td>
       <td>Will Zalatoris -3
 -3 thru 13</td>
       <td>Tony Finau -1
 -1 (F)</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-5</td>
+      <td>Sungjae Im -5
+-5 thru 15</td>
+      <td>Viktor Hovland(W) E
+E thru 12</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 13</td>
+      <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
     <tr>
@@ -236,6 +252,22 @@ E thru 12</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Rory McIlroy -1
+-1 thru 12</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 13</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 12</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -4
@@ -268,48 +300,16 @@ E thru 12</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-4</td>
-      <td>Sungjae Im -5
--5 thru 15</td>
-      <td>Viktor Hovland(W) E
-E thru 12</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td>Collin Morikawa +1
-+1 thru 13</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 12</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Rory McIlroy -1
--1 thru 12</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td>Collin Morikawa +1
-+1 thru 13</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
-      <td class="greyout">Patrick Cantlay +1
-+1 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-4</td>
       <td>Dustin Johnson -4
 -4 thru 13</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
       <td>Viktor Hovland E
 E thru 12</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
       <td class="greyout leftborder">Jordan Spieth(W) +2
 +2 thru 12</td>
       <td class="greyout">Jon Rahm +2
@@ -333,11 +333,11 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Corey Conners -2
 -2 thru 17</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
       <td>Tyrrell Hatton +1
 +1 thru 14</td>
       <td>Shane Lowry +1
@@ -349,15 +349,15 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Tony Finau -1
 -1 (F)</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
       <td>Brooks Koepka E
 E thru 12</td>
       <td>Collin Morikawa +1
 +1 thru 13</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 +2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
