--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:10:36 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:11:19 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -473,7 +473,7 @@ E thru 12</td>
       <td class="greyout leftborder">Xander Schauffele(W) +1
 +1 thru 12</td>
       <td class="greyout">Collin Morikawa +1
-+1 thru 13</td>
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -615,7 +615,7 @@ E thru 12</td>
       <td>Viktor Hovland E
 E thru 12</td>
       <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 13</td>
++1 thru 14</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -805,7 +805,7 @@ E thru 12</td>
       <td>Patrick Cantlay E
 E thru 13</td>
       <td>Collin Morikawa +1
-+1 thru 13</td>
++1 thru 14</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 12</td>
       <td class="greyout">Jon Rahm +2
@@ -869,7 +869,7 @@ E thru 12</td>
       <td>Robert MacIntyre +1
 +1 (F)</td>
       <td>Collin Morikawa +1
-+1 thru 13</td>
++1 thru 14</td>
       <td class="greyout leftborder">Jon Rahm +2
 +2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
@@ -885,7 +885,7 @@ E thru 12</td>
       <td>Viktor Hovland E
 E thru 12</td>
       <td>Collin Morikawa(W) +1
-+1 thru 13</td>
++1 thru 14</td>
       <td class="greyout leftborder">Gary Woodland +3
 +3 (F)</td>
       <td class="greyout">Justin Thomas +4
@@ -981,7 +981,7 @@ E thru 13</td>
       <td>Brooks Koepka E
 E thru 12</td>
       <td>Collin Morikawa +1
-+1 thru 13</td>
++1 thru 14</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 +2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
@@ -995,7 +995,7 @@ E thru 13</td>
       <td>Brooks Koepka E
 E thru 12</td>
       <td>Collin Morikawa +1
-+1 thru 13</td>
++1 thru 14</td>
       <td>Xander Schauffele +1
 +1 thru 12</td>
       <td class="greyout leftborder">Jordan Spieth +2
@@ -1059,7 +1059,7 @@ E thru 13</td>
       <td>Hideki Matsuyama E
 E (F)</td>
       <td>Collin Morikawa(W) +1
-+1 thru 13</td>
++1 thru 14</td>
       <td>Jon Rahm +2
 +2 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth +2
@@ -1075,13 +1075,13 @@ E thru 12</td>
       <td>Brooks Koepka E
 E thru 12</td>
       <td>Collin Morikawa +1
-+1 thru 13</td>
++1 thru 14</td>
       <td>Jon Rahm +2
 +2 thru 13</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td class="greyout leftborder">Patrick Reed +2
++2 thru 17</td>
+      <td class="greyout">Jordan Spieth +2
 +2 thru 12</td>
-      <td class="greyout">Patrick Reed +3
-+3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
