--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:11:19 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:12:02 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -153,7 +153,7 @@ body {
       <td class="greyout leftborder">Brooks Koepka E
 E thru 12</td>
       <td class="greyout">Russell Henley +1
-+1 thru 17</td>
++1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
@@ -422,10 +422,10 @@ E thru 12</td>
 E thru 13</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td class="greyout leftborder">Xander Schauffele +1
+      <td class="greyout leftborder">Billy Horschel +1
++1 thru 14</td>
+      <td class="greyout">Xander Schauffele +1
 +1 thru 12</td>
-      <td class="greyout">Billy Horschel +2
-+2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
