--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:19:56 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:20:39 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -154,22 +154,6 @@ body {
 +1 thru 14</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Joaquin Niemann -3
--3 (F)</td>
-      <td>Rory McIlroy -1
--1 thru 12</td>
-      <td>Viktor Hovland E
-E thru 12</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +3
-+3 (F)</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -204,18 +188,18 @@ E thru 13</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-5</td>
-      <td>Sungjae Im -5
--5 thru 16</td>
-      <td>Viktor Hovland(W) E
-E thru 12</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td>Patrick Cantlay E
-E thru 13</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 14</td>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Joaquin Niemann -3
+-3 (F)</td>
+      <td>Rory McIlroy -1
+-1 thru 12</td>
+      <td>Viktor Hovland +1
++1 thru 13</td>
+      <td class="greyout leftborder">Tommy Fleetwood(W) +3
++3 (F)</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -268,22 +252,6 @@ E thru 13</td>
 +1 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Corey Conners -2
--2 (F)</td>
-      <td>Viktor Hovland E
-E thru 12</td>
-      <td>Xander Schauffele +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 13</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">-4</td>
       <td>Dustin Johnson -4
@@ -300,16 +268,48 @@ E thru 12</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-4</td>
+      <td>Sungjae Im -5
+-5 thru 16</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td>Patrick Cantlay E
+E thru 13</td>
+      <td>Viktor Hovland(W) +1
++1 thru 13</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 14</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Corey Conners -2
+-2 (F)</td>
+      <td>Viktor Hovland +1
++1 thru 13</td>
+      <td>Xander Schauffele +1
++1 thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 13</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-3</td>
       <td>Dustin Johnson -4
 -4 thru 14</td>
       <td>Patrick Cantlay E
 E thru 13</td>
-      <td>Viktor Hovland E
-E thru 12</td>
       <td>Brooks Koepka E
 E thru 12</td>
+      <td>Viktor Hovland +1
++1 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth(W) +2
 +2 thru 13</td>
       <td class="greyout">Jon Rahm +2
@@ -364,22 +364,6 @@ E thru 12</td>
 +2 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">3</td>
-      <td>Viktor Hovland(W) E
-E thru 12</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td>Collin Morikawa +1
-+1 thru 14</td>
-      <td>Jon Rahm +2
-+2 thru 13</td>
-      <td class="greyout leftborder">Patrick Reed +2
-+2 thru 17</td>
-      <td class="greyout">Luke List +5
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">3</td>
       <td>Corey Conners -2
@@ -394,6 +378,22 @@ E thru 12</td>
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">4</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td>Viktor Hovland(W) +1
++1 thru 13</td>
+      <td>Collin Morikawa +1
++1 thru 14</td>
+      <td>Jon Rahm +2
++2 thru 13</td>
+      <td class="greyout leftborder">Patrick Reed +2
++2 thru 17</td>
+      <td class="greyout">Luke List +5
++5 (F)</td>
     </tr>
   </tbody>
 </table>
