--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:29:58 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:30:41 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,22 +172,6 @@ body {
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Will Zalatoris -2
--2 thru 14</td>
-      <td>Matthew Fitzpatrick -1
--1 thru 13</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -3
@@ -204,18 +188,34 @@ E thru 14</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Will Zalatoris -2
+-2 thru 14</td>
+      <td>Matthew Fitzpatrick -1
+-1 thru 13</td>
+      <td>Brooks Koepka +1
++1 thru 13</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -4
 -4 (F)</td>
       <td>Rory McIlroy -1
 -1 thru 13</td>
-      <td>Brooks Koepka E
-E thru 12</td>
+      <td>Collin Morikawa E
+E thru 15</td>
       <td>Patrick Cantlay E
 E thru 14</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka +1
++1 thru 13</td>
       <td class="greyout">Xander Schauffele +1
 +1 thru 13</td>
     </tr>
@@ -240,32 +240,16 @@ E thru 14</td>
       <td class="bigbold">-4</td>
       <td>Sungjae Im -5
 -5 thru 16</td>
-      <td>Brooks Koepka E
-E thru 12</td>
+      <td>Collin Morikawa E
+E thru 15</td>
       <td>Patrick Cantlay E
 E thru 14</td>
       <td>Viktor Hovland(W) +1
 +1 thru 13</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka +1
++1 thru 13</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler(W) -3
--3 (F)</td>
-      <td>Will Zalatoris -2
--2 thru 14</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td>Jon Rahm +1
-+1 thru 14</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -276,10 +260,10 @@ E thru 12</td>
 -1 (F)</td>
       <td>Daniel Berger -1
 -1 (F)</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 14</td>
+      <td>Collin Morikawa E
+E thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka +1
++1 thru 13</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -300,15 +284,47 @@ E thru 12</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-3</td>
+      <td>Scottie Scheffler(W) -3
+-3 (F)</td>
+      <td>Will Zalatoris -2
+-2 thru 14</td>
+      <td>Jon Rahm +1
++1 thru 14</td>
+      <td>Brooks Koepka +1
++1 thru 13</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-2</td>
+      <td>Corey Conners(W) -2
+-2 (F)</td>
+      <td>Daniel Berger -1
+-1 (F)</td>
+      <td>Collin Morikawa E
+E thru 15</td>
+      <td>Jon Rahm +1
++1 thru 14</td>
+      <td class="greyout leftborder">Robert MacIntyre +1
++1 (F)</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-2</td>
       <td>Dustin Johnson -4
 -4 thru 15</td>
       <td>Patrick Cantlay E
 E thru 14</td>
-      <td>Brooks Koepka E
-E thru 12</td>
       <td>Viktor Hovland +1
++1 thru 13</td>
+      <td>Brooks Koepka +1
 +1 thru 13</td>
       <td class="greyout leftborder">Jon Rahm +1
 +1 thru 14</td>
@@ -332,34 +348,18 @@ E thru 15</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-1</td>
-      <td>Corey Conners(W) -2
--2 (F)</td>
-      <td>Daniel Berger -1
--1 (F)</td>
-      <td>Collin Morikawa +1
-+1 thru 14</td>
-      <td>Jon Rahm +1
-+1 thru 14</td>
-      <td class="greyout leftborder">Robert MacIntyre +1
-+1 (F)</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 13</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">0</td>
       <td>Tony Finau -1
 -1 (F)</td>
+      <td>Collin Morikawa E
+E thru 15</td>
       <td>Patrick Cantlay E
 E thru 14</td>
-      <td>Brooks Koepka E
-E thru 12</td>
       <td>Jon Rahm(W) +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka +1
++1 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 13</td>
     </tr>
@@ -382,14 +382,14 @@ E thru 12</td>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">3</td>
-      <td>Brooks Koepka E
-E thru 12</td>
+      <td>Collin Morikawa E
+E thru 15</td>
       <td>Viktor Hovland(W) +1
 +1 thru 13</td>
       <td>Jon Rahm +1
 +1 thru 14</td>
-      <td>Collin Morikawa +1
-+1 thru 14</td>
+      <td>Brooks Koepka +1
++1 thru 13</td>
       <td class="greyout leftborder">Patrick Reed +2
 +2 (F)</td>
       <td class="greyout">Luke List +5
